[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/Weapon.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Enemy.gd" type="Script" id=2]
[ext_resource path="res://sprite/tilesheet_transparent.png" type="Texture" id=3]
[ext_resource path="res://scripts/AI.gd" type="Script" id=5]
[ext_resource path="res://scenes/Health.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 6 )

[sub_resource type="CircleShape2D" id=2]
radius = 45.0942

[node name="Enemy" type="KinematicBody2D" groups=[
"Human_Enemies",
]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 479, 36, 8, 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Health" parent="." instance=ExtResource( 6 )]

[node name="Weapon" parent="." instance=ExtResource( 1 )]
position = Vector2( 4, 4 )

[node name="AI" type="Node2D" parent="."]
position = Vector2( 4, 4 )
script = ExtResource( 5 )

[node name="PlayerDetectionZone" type="Area2D" parent="AI"]
position = Vector2( -4, -4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AI/PlayerDetectionZone"]
shape = SubResource( 2 )
[connection signal="body_entered" from="AI/PlayerDetectionZone" to="AI" method="_on_PlayerDetectionZone_body_entered"]
[connection signal="body_exited" from="AI/PlayerDetectionZone" to="AI" method="_on_PlayerDetectionZone_body_exited"]
